<?xml version= "1.0"  encoding= "utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_bluetooth_mess"
            android:textSize="20sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/bluetooth_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding= "10dp"/>

        <Button
            android:id="@+id/but_changestate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/but_bluetooth_close" />

        <Button
            android:id="@+id/bt_next"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/but_next"/>

    </LinearLayout>

</LinearLayout>
